[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/zx-spectrum.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Images/Backgrounds/bg_top.png" type="Texture" id=2]
[ext_resource path="res://Images/Backgrounds/bg_bottom.png" type="Texture" id=3]
[ext_resource path="res://Scripts/ParallaxBackground.gd" type="Script" id=4]
[ext_resource path="res://Scripts/SoundControll.gd" type="Script" id=5]
[ext_resource path="res://Images/Icons/merged.png" type="Texture" id=6]
[ext_resource path="res://Sounds/Music/ItsAllGood.mp3" type="AudioStream" id=7]
[ext_resource path="res://Images/Other/bot√£o_loja.png" type="Texture" id=8]
[ext_resource path="res://Scripts/ShopBtn.gd" type="Script" id=9]
[ext_resource path="res://Sounds/Effects/pop.mp3" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45.5214, 43.4351 )

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 1 )

[node name="PlantScene" type="Node2D"]

[node name="Background" type="Node2D" parent="."]
z_index = -10

[node name="bg_bottom" type="Sprite" parent="Background"]
position = Vector2( 0, 500 )
texture = ExtResource( 3 )
centered = false

[node name="Label" type="Label" parent="Background/bg_bottom"]
margin_left = 66.0
margin_top = 117.0
margin_right = 751.0
margin_bottom = 778.0
custom_fonts/font = SubResource( 1 )
text = "Aqui fica a cartinha explicando que o ser deve clicar na loja"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxBackground" type="ParallaxBackground" parent="Background"]
script = ExtResource( 4 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background/ParallaxBackground"]
motion_mirroring = Vector2( 2160, 0 )

[node name="bg_top" type="Sprite" parent="Background/ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 2 )
centered = false

[node name="SoundControll" type="Area2D" parent="."]
position = Vector2( 49.6207, 55.748 )
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoundControll"]
position = Vector2( 44.0332, 46.7729 )
shape = SubResource( 2 )

[node name="SoundIcon" type="Sprite" parent="SoundControll"]
position = Vector2( 47.6235, 47.3562 )
texture = ExtResource( 6 )
hframes = 2

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="SoundControll"]
stream = ExtResource( 7 )
volume_db = -10.0
autoplay = true

[node name="Shop" type="Button" parent="."]
margin_left = 443.902
margin_top = 105.303
margin_right = 675.902
margin_bottom = 166.303
custom_fonts/font = SubResource( 3 )
text = "Loja"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShopNew" type="TextureButton" parent="."]
margin_left = 445.0
margin_top = 108.0
margin_right = 669.0
margin_bottom = 165.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ShopNew"]
position = Vector2( 113.363, 39.2001 )
scale = Vector2( 0.293691, 0.293691 )
texture = ExtResource( 8 )

[node name="ClickSound" type="AudioStreamPlayer" parent="ShopNew"]
stream = ExtResource( 10 )

[connection signal="input_event" from="SoundControll" to="SoundControll" method="_on_input_event"]
[connection signal="button_up" from="Shop" to="Shop" method="_on_button_up"]
[connection signal="button_down" from="ShopNew" to="ShopNew" method="_on_button_down"]
[connection signal="button_up" from="ShopNew" to="ShopNew" method="_on_button_up"]
